# otel-hello-world

./: Cargo.toml
src/: main.rs
